fix: align css layers and variables to new styleguide

--- a/source/sass/progressbar.scss
+++ b/source/sass/progressbar.scss
@@ -7,19 +7,23 @@
     .mod-frontend-form__progressbar {
         scrollbar-width: none;
     }
+
     .mod-frontend-form__progressbar:hover {
         scrollbar-width: thin;
     }
+
     .mod-frontend-form__progressbar::-webkit-scrollbar {
         height: 0;
     }
+
     .mod-frontend-form__progressbar:hover::-webkit-scrollbar {
         height: 6px;
     }
+
     .mod-frontend-form__progressbar::-webkit-scrollbar-track {
         background: transparent;
     }
-    
+
     .mod-frontend-form__progressbar .mod-frontend-form__progressbar-step {
         min-width: max(calc(var(--base, 8px) * 24), 33.333%);
     }
@@ -61,13 +65,13 @@
         }
     }
 
-    @container (width > 500px) and (width <= 800px) {
+    @container (width > 500px) and (width <=800px) {
         .mod-frontend-form__progressbar {
             padding: 0 calc(var(--base, 8px) * 3);
         }
     }
 
-    @container (width <= 800px) {
+    @container (width <=800px) {
         flex-direction: column;
 
         .mod-frontend-form__progressbar-wrapper {
@@ -81,7 +85,7 @@
                 height: 100%;
                 z-index: 1000;
                 width: calc(var(--base, 8px) * 2);
-                background: linear-gradient(90deg,rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
+                background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
             }
 
             &::before {
@@ -188,11 +192,12 @@
         .mod-frontend-form__progressbar-step-button {
             background-color: var(--step-background-color-icon);
         }
+
         .mod-frontend-form__progressbar-step-button-icon {
             color: var(--step-background-color-icon-contrast);
         }
     }
-   
+
     &.has-passed {
         .mod-frontend-form__progressbar-step-button {
             --step-background-color-icon: var(--color-dark, #707070);
@@ -202,8 +207,8 @@
 
     &.is-active {
         .mod-frontend-form__progressbar-step-button {
-            --step-background-color-icon: var(--color-primary, #3333ff);
-            --step-background-color-icon-contrast: var(--color-primary-contrast, #ffffff);
+            --step-background-color-icon: var(--color--primary, #3333ff);
+            --step-background-color-icon-contrast: var(--color--primary-contrast, #ffffff);
         }
 
         @container (width < 600px) {
